[metadata]
# name = <my_package_name>
name = cryptography_utils
# may be able to automate with git tag version, TBD
# version = <a.b.c>
version = 1.0.0

[options]
packages = find:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
install_requires =
# fill line by line <package_name>
# e.g. numpy
#      pandas
# probably 4 spaces
    pycryptodome

#[options.entry_points]
#console_scripts =
# probably 4 spaces
#    some_func = mysubpkg:some_func
